--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>OU7 Training | HIIT тренировки в приложении OU7 Training</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="shortcut icon" href="./img/ou7.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./templates/template.css">
+    <link rel="shortcut icon" href="./img/ou7.svg" type="image/x-icon">
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () {
