--- a/index-uz.html
+++ b/index-uz.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uz">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OU7 Training | OU7 Training ilovasida HIIT mashg'ulotlari </title>
+    <title>OU7 Training | HIIT тренировки в приложении OU7 Training</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
-    <link rel="shortcut icon" href="./img/ou7.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./templates/template.css">
+    <link rel="shortcut icon" href="./img/ou7.svg" type="image/x-icon">
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () {
@@ -32,6 +33,7 @@
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/89499998" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
+
 </head>
 
 <body>
@@ -40,7 +42,11 @@
         <div class="container header__container">
             <nav class="header__nav row space-between">
                 <div class="header__logo">
-                    <img src="./img/icon.svg" class="header__logo-icon" alt="">
+                    <img src="./img/ou7.svg" class="header__logo-image" alt="">
+                    <div class="header__hidden-texts">
+                        <p class="logo__name">OU7 Training</p>
+                        <p class="author__name">Otabek Umarov <br> ko'magi ostida yaratilgan</p>
+                    </div>
                 </div>
                 <div class="header__link row">
                     <div class="header__download d-flex">
@@ -81,7 +87,7 @@
                     <div class="main__content-absolutes" data-depth="-0.1">
                         <img src="./img/absolutes/numbers.png" class="calory absolute" alt="">
                     </div>
-                    <div class="autoGraphics main__content-absolutes" data-depth="0.1">
+                    <div class="autoGraphics main__content-absolutes" data-depth="0.2">
                         <img src="./img/absolutes/auto.svg" class="install autoPar t300 ml-1 mr-1" alt="">
                         <img src="./img/absolutes/1080.svg" class="install autoPar1 t300" alt="">
                     </div>
@@ -94,167 +100,173 @@
         <section class="main__swiper">
             <div class="container">
                 <div class="swiper__title">
-                    <img src="./img/commentUzDesktop.svg" class="comment absolute" alt="">
-                    <img src="./img/commentUzbMobile.svg" class="comment mobileComment absolute" alt="">
-                    <h1 class="swiper-title-hiit">
-                        OU7 Training ilovasida HIIT mashg'ulotlari
-                    </h1>
+
+                    <div class="text-title">
+                        <img src="./img/commentUzbMobile.svg" class="comment mobileComment" alt="">
+                        <img src="./img/commentUzDesktop.svg" class="comment" alt="">
+
+                        <h1 class="swiper-title-hiit">
+                            OU7 Training ilovasida HIIT mashg'ulotlari
+                        </h1>
+                    </div>
                     <p class="swiper-text-hiit">
-                        Kaloriyani tez yo'qotishga yordam beruvchi yuqori intensivdagi mashg'ulotlar
+                        Kaloriyani tez yo'qotishga yordam beruvchi yuqori intensivdagi mashg’ulotlar
                     </p>
                 </div>
             </div>
-            <div class="swiper mySwiper">
+            <div class="swiper  mySwiper">
                 <div class="swiper-wrapper swiper-wrapper1">
                     <div class="swiper-slide left-swipe swiper__slide relative">
-                        <img src="./img/videoplayer.png" class="w100 phone__player relative" alt="">
-                        <div class="swiper__slide-absolutes">
-                            <img src="./img/absolutes/numbers.png" class="absolute t300 swiper-slide__absolute-image"
-                                alt="">
-                            <div class="swiper-graphics absolute d-flex">
-                                <img src="./img/absolutes/auto.svg" class="t300 mr-1 swiper-slide__absolute-graphics"
-                                    alt="">
-                                <img src="./img/absolutes/1080.svg"
-                                    class="swiper-slide__absolute-graphics auto1080 t300 blur20" alt="">
+                        <div class="swiper__slide-block relative">
+                            <img src="./img/videoplayer.png" class="w100 phone__player first" alt="">
+                            <img src="./img/absolutes/numbers.png" class="t300 swiper-slide__absolute-image" alt="">
+                            <div class="swiper__slide-absolutes">
+                                <div class="swiper-absolute-flex">
+                                    <img src="./img/absolutes/auto.svg" class="t300 swiper-slide__absolute-graphics"
+                                        alt="">
+                                    <img src="./img/absolutes/1080.svg"
+                                        class="swiper-slide__absolute-graphics auto1080 t300 blur20" alt="">
+                                </div>
                             </div>
+                            <p class="swiper__text">Sizning internetingiz tezligiga moslashuvchi video-mashg'ulotlar
+                                sifati</p>
                         </div>
-                        <p class="swiper__text">Internet tezligiga moslashtirilgan video-mashg'ulotlar </p>
-                    </div>
-                    <div class="swiper-slide right-swipe swiper__slide relative">
-                        <img src="./img/videoplayer.png" class="w100 phone__player relative" alt="">
-                        <div class="swiper__slide-absolutes">
-                            <img src="./img/absolutes/numbers.png" class="absolute t300 swiper-slide__absolute-image1"
-                                alt="">
-                            <div class="swiper-graphics1 absolute d-flex">
-                                <img src="./img/absolutes/auto.svg" class="t300 mr-1 swiper-slide__absolute-graphics1"
-                                    alt="">
-                                <img src="./img/absolutes/1080.svg"
-                                    class="swiper-slide__absolute-graphics1 auto1080 t300 blur20" alt="">
-                            </div>
-                        </div>
-                        <p class="swiper__text">Onlayn tarzda yurak urishi va yoqotilgan kaloriyalarni kuzatish
-                            imkoniyati
-                    </div>
 
+                    </div>
+                    <div class="swiper-slide right-swipe swiper__slide ">
+                        <div class="swiper__slide-block relative">
+                            <img src="./img/videoplayer.png" class="w100 phone__player second" alt="">
+                            <img src="./img/absolutes/numbers.png" class="t300 swiper-slide__absolute-image1" alt="">
+                            <div class="swiper__slide-absolutes1">
+                                <div class="swiper-absolute-flex hide">
+                                    <img src="./img/absolutes/auto.svg" class="t300 swiper-slide__absolute-graphics1"
+                                        alt="">
+                                    <img src="./img/absolutes/1080.svg"
+                                        class="swiper-slide__absolute-graphics1 auto1080 t300 blur20" alt="">
+                                </div>
+                            </div>
+                            <p class="swiper__text">Yurak urishi va yo'qotilgan kaloriyalarni ekranda kuzatish
+                                imkoniyati
+                        </div>
+                    </div>
                 </div>
-                <div class="header__download1">
+                <div class="download__block">
                     <div class="header__appstore t300 install">
-                        <a href="https://apps.apple.com/app/ou7-training-pro/id1487763621"><img src="./img/appstore.svg"
-                                class="appstore download" alt=""></a>
+                        <a target="_blank" href="https://apps.apple.com/app/ou7-training-pro/id1487763621"><img
+                                src="./img/appstore.svg" class="appstore download" alt=""></a>
                     </div>
                     <div class="header__google t300 install">
-                        <a href="https://play.google.com/store/apps/details?id=com.neotech.ou7"><img
+                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.neotech.ou7"><img
                                 src="./img/googleplay.svg" class="google download" alt=""></a>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
+
+
         </section>
         <section class="types">
             <div class="container">
                 <div class="type-title">
-                    <h1 class="type-title-number">6 ta yangi formatdagi HIIT mashg'ulotlari
-                    </h1>
-                    <p class="type-title-why">Har qanday jismoniy tayyorgarlik uchun mo'ljallangan </p>
+                    <h1 class="type-title-number">6 ta yangi formatdagi HIIT mashg'ulotlari</h1>
+                    <p class="type-title-why">Har qanday jismoniy tayyorgarlik uchun mo'ljallangan</p>
                 </div>
-                <div class="swiper mySwiper2">
-                    <div class="swiper-wrapper swiper__wrapper-phone">
-                        <div class="swiper-slide types-slide">
-                            <img src="./img/swiperInner/1.png" aria-colspan="" alt=""
-                                class="swiper-slide-type type-image type-1 relative">
-                            <div class="types-inners">
-                                <p class="type-level medium absolute">O'rta</p>
-                                <p class="type-level-about absolute">Yog'larni yo'qotib quvvatga to'yinamiz
-                                </p>
-                            </div>
+
+            </div>
+            <div class="swiper mySwiper2">
+                <div class="swiper-wrapper swiper__wrapper-phone">
+                    <div class="swiper-slide types-slide">
+                        <img src="./img/swiperInner/1.png" aria-colspan="" alt="" class="swiper-slide-type">
+                        <div class="types-inners">
+                            <p class="type-level medium absolute">O'rta</p>
+                            <p class="type-level-about absolute">Yog'larni yo'qotib quvvatga to'yinamiz
+                            </p>
                         </div>
-                        <div class="swiper-slide types-slide">
-                            <img src="./img/swiperInner/2.png" aria-colspan="" alt=""
-                                class="swiper-slide-type type-image type-1 relative">
-                            <div class="types-inners">
-                                <p class="type-level hard absolute">Qiyin</p>
-                                <p class="type-level-about absolute">30 daqiqada 500 kaloriya yo'qotamiz
-                                </p>
-                            </div>
+                    </div>
+                    <div class="swiper-slide types-slide">
+                        <img src="./img/swiperInner/2.png" aria-colspan="" alt="" class="swiper-slide-type">
+                        <div class="types-inners">
+                            <p class="type-level hard absolute">Qiyin</p>
+                            <p class="type-level-about absolute">30 daqiqada 500 kaloriya yo'qotamiz
+                            </p>
                         </div>
-                        <div class="swiper-slide types-slide">
-                            <img src="./img/swiperInner/3.png" aria-colspan="" alt=""
-                                class="swiper-slide-type type-image type-1 relative">
-                            <div class="types-inners">
-                                <p class="type-level easy absolute">Лёгкий</p>
-                                <p class="type-level-about absolute">Качаем ноги и пресс</p>
-                            </div>
+                    </div>
+                    <div class="swiper-slide types-slide">
+                        <img src="./img/swiperInner/3.png" aria-colspan="" alt="" class="swiper-slide-type">
+                        <div class="types-inners">
+                            <p class="type-level easy absolute">Oson</p>
+                            <p class="type-level-about absolute">Oyoqlar va pressni chiniqtiramiz
+                            </p>
                         </div>
-                        <div class="swiper-slide types-slide">
-                            <img src="./img/swiperInner/4.png" aria-colspan="" alt=""
-                                class="swiper-slide-type type-image type-1 relative">
-                            <div class="types-inners">
-                                <p class="type-level easy absolute">Oson</p>
-                                <p class="type-level-about absolute">Butun tana uchun ekspress mashg'ulot
-                                </p>
-                            </div>
+                    </div>
+                    <div class="swiper-slide types-slide">
+                        <img src="./img/swiperInner/4.png" aria-colspan="" alt="" class="swiper-slide-type">
+                        <div class="types-inners">
+                            <p class="type-level easy absolute">Oson</p>
+                            <p class="type-level-about absolute">Butun tana uchun ekspress mashg'ulot
+                            </p>
                         </div>
-                        <div class="swiper-slide types-slide">
-                            <img src="./img/swiperInner/5.png" aria-colspan="" alt=""
-                                class="swiper-slide-type type-image type-1 relative">
-                            <div class="types-inners">
-                                <p class="type-level medium absolute">O'rta</p>
-                                <p class="type-level-about absolute">Juda band insonlar uchun</p>
-                            </div>
+                    </div>
+                    <div class="swiper-slide types-slide">
+                        <img src="./img/swiperInner/5.png" aria-colspan="" alt="" class="swiper-slide-type">
+                        <div class="types-inners">
+                            <p class="type-level medium absolute">O'rta</p>
+                            <p class="type-level-about absolute">
+                                Juda band insonlar uchun
+                            </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="swiper-download">
-                    <div class="main__appstore install">
-                        <a target="_blank" href="https://apps.apple.com/app/ou7-training-pro/id1487763621"><img
-                                src="./img/appstore.svg" class="appstore download t300" alt=""></a>
-                    </div>
-                    <div class="main__google install">
-                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.neotech.ou7"><img
-                                src="./img/googleplay.svg" class="google download t300" alt=""></a>
-                    </div>
+            </div>
+
+            <div class="download__block">
+                <div class="main__appstore install">
+                    <a target="_blank" href="https://apps.apple.com/app/ou7-training-pro/id1487763621"><img
+                            src="./img/appstore.svg" class="appstore download t300" alt=""></a>
+                </div>
+                <div class="main__google install">
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.neotech.ou7"><img
+                            src="./img/googleplay.svg" class="google download t300" alt=""></a>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-
         <div class="footer__image">
-            <img src="./img/woman__footer.png" class="relative woman__footer" alt="">
+            <img src="./img/woman__footer.png" class="woman__footer" alt="">
             <div class="footer__name">
                 <img src="./img/name__footer.png" class="absolute woman__name" alt="">
             </div>
         </div>
-        <p class="banner__title">BeFit Eco-dan guruh yo'nalishlari va shaxsiy mashg'ulotlar bo'yicha murabbiy</p>
+        <p class="banner__title">BeFit Eco guruh yo'nalishlari va shaxsiy mashg'ulotlari bo'yicha murabbiy</p>
         <nav class="footer__nav">
             <div class="container">
                 <a href="index.html">
                     <img class="footer__logo" src="./img/icon.svg" alt="">
-                    <div class="footer__hidden-logo">
-                        <img src="./img/ou7.svg" class="footer-hidden-logo" alt="">
+                    <div class="footer__logo hidden">
+                        <img src="./img/ou7.svg" class="footer__logo-image" alt="">
                         <div class="footer__hidden-texts">
                             <p class="logo__name">OU7 Training</p>
-                            <p class="author__name">Создано при поддержке <br> Отабека Умарова</p>
+                            <p class="author__name">Otabek Umarov <br> ko'magi ostida yaratilgan</p>
                         </div>
                     </div>
                 </a>
-
                 <p class="copyright">Copyright © OU7, 2022</p>
                 <ul class="footer__list row">
                     <li class="footer__item">
-                        <a href="">
+                        <a target="_blank" href="https://t.me/ou7_training_app">
                             <img src="./img/social media/tg.svg" alt="">
                         </a>
                     </li>
                     <li class="footer__item ml-1 mr-1">
-                        <a href="https://www.instagram.com/ou7training">
+                        <a target="_blank" href="https://www.instagram.com/ou7training">
                             <img src="./img/social media/insta.svg" alt="">
                         </a>
                     </li>
                     <li class="footer__item">
-                        <a href="https://www.facebook.com/OU7Training">
+                        <a target="_blank" href="https://www.facebook.com/OU7Training">
                             <img src="./img/social media/facebook.png" alt="">
                         </a>
                     </li>
@@ -262,8 +274,6 @@
             </div>
         </nav>
     </footer>
-
-
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
