--- a/index-uz.html
+++ b/index-uz.html
@@ -237,7 +237,7 @@
         <div class="footer__image">
             <img src="./img/woman__footer.png" class="woman__footer" alt="">
             <div class="footer__name">
-                <img src="./img/name__footer.png" class="absolute woman__name" alt="">
+                <img src="./img/woman__nameUz.png" class="absolute woman__name" alt="">
             </div>
         </div>
         <p class="banner__title">BeFit Eco guruh yo'nalishlari va shaxsiy mashg'ulotlari bo'yicha murabbiy</p>
@@ -279,6 +279,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
+
+    <style scoped>
+        .comment {
+            top: -7rem;
+        }
+    </style>
 </body>
 
 </html>
