--- a/index-uz.html
+++ b/index-uz.html
@@ -244,10 +244,9 @@
         <nav class="footer__nav">
             <div class="container">
                 <a href="index.html">
-                    <img class="footer__logo" src="./img/icon.svg" alt="">
-                    <div class="footer__logo hidden">
-                        <img src="./img/ou7.svg" class="footer__logo-image" alt="">
-                        <div class="footer__hidden-texts">
+                    <div class="header__logo">
+                        <img src="./img/ou7.svg" class="header__logo-image" alt="">
+                        <div class="header__hidden-texts">
                             <p class="logo__name">OU7 Training</p>
                             <p class="author__name">Otabek Umarov <br> ko'magi ostida yaratilgan</p>
                         </div>
