save changes to comment

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                         class="swiper-slide__absolute-graphics auto1080 t300 blur20" alt="">
                                 </div>
                             </div>
-                            <p class="swiper__text">Стриминг видеотренировок с адаптацией качества под скорость
-                                интернета</p>
+                            <p class="swiper__text">Стрим-тренировки с адаптацией качества под скорость вашего интернета
+                            </p>
                         </div>
 
                     </div>
@@ -142,7 +142,8 @@
                                         class="swiper-slide__absolute-graphics1 auto1080 t300 blur20" alt="">
                                 </div>
                             </div>
-                            <p class="swiper__text">Возможность отслеживать пульс и сожжённые калории в реальном времени
+                            <p class="swiper__text">Возможность отслеживать пульс и сожженные калории на экране
+                                стрим-тренировки
                         </div>
                     </div>
                 </div>
