--- a/index.html
+++ b/index.html
@@ -271,6 +271,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
+    <style scoped>
+        .swiper-title-hiit {
+            max-width: 76rem;
+        }
+
+        .comment {
+            right: 10rem;
+            
+        }
+    </style>
 </body>
 
 </html>
